# nng-meson-patch

./: README.md  meson.build  meson_options.txt  nng.wrap
src/: meson.build
src/compat/: meson.build
src/core/: meson.build
src/platform/: meson.build
src/platform/posix/: meson.build
src/platform/windows/: meson.build
src/protocol/: meson.build
src/protocol/bus0/: meson.build
src/protocol/pair0/: meson.build
src/protocol/pair1/: meson.build
src/protocol/pipeline0/: meson.build
src/protocol/pubsub0/: meson.build
src/protocol/reqrep0/: meson.build
src/protocol/survey0/: meson.build
src/supplemental/: meson.build
src/supplemental/base64/: meson.build
src/supplemental/http/: meson.build
src/supplemental/sha1/: meson.build
src/supplemental/tls/: meson.build
src/supplemental/util/: meson.build
src/supplemental/websocket/: meson.build
src/transport/: meson.build
src/transport/inproc/: meson.build
src/transport/ipc/: meson.build
src/transport/tcp/: meson.build
src/transport/tls/: meson.build
src/transport/ws/: meson.build
src/transport/zerotier/: meson.build
