
core_src = files(
    'aio.c',
    'clock.c',
    'device.c',
    'dialer.c',
    'file.c',
    'idhash.c',
    'init.c',
    'list.c',
    'listener.c',
    'message.c',
    'msgqueue.c',
    'options.c',
    'panic.c',
    'pipe.c',
    'pollable.c',
    'protocol.c',
    'random.c',
    'reap.c',
    'socket.c',
    'stats.c',
    'strs.c',
    'taskq.c',
    'thread.c',
    'timer.c',
    'transport.c',
    'url.c')
