posix_src = files(
    'posix_alloc.c',
    'posix_atomic.c',
    'posix_clock.c',
    'posix_debug.c',
    'posix_file.c',
    'posix_ipcconn.c',
    'posix_ipcdial.c',
    'posix_ipclisten.c',
    'posix_pipe.c',
    'posix_pollq_epoll.c',
    'posix_pollq_kqueue.c',
    'posix_pollq_poll.c',
    'posix_pollq_port.c',
    'posix_rand.c',
    'posix_resolv_gai.c',
    'posix_sockaddr.c',
    'posix_tcpconn.c',
    'posix_tcpdial.c',
    'posix_tcplisten.c',
    'posix_thread.c',
    'posix_udp.c')